# tmpofd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
resources/ofds/: 测试文件.ofd
resources/xmls/annotation/: baseline.xml
resources/xmls/annotations/: baseline.xml
resources/xmls/attachments/: baseline.xml
resources/xmls/custom_tags/: baseline.xml
resources/xmls/document/: baseline.xml
resources/xmls/extensions/: baseline.xml
resources/xmls/ofd/: baseline.xml  doctype_entity.xml  minimal_robustness.xml  special_chars.xml  syntax_edge_cases.xml
resources/xmls/page/: baseline.xml
resources/xmls/res/: baseline.xml
resources/xmls/signature/: baseline.xml
resources/xmls/signatures/: baseline.xml
resources/xmls/version/: baseline.xml
resources/xsds/: Annotation.xsd  Annotations.xsd  Attachments.xsd  CustomTags.xsd  Definitions.xsd  Document.xsd  Extensions.xsd  OFD.xsd  Page.xsd  Res.xsd  Signature.xsd  Signatures.xsd  Version.xsd  ofdspec.xsd
templates/: version.h.in
tests/: CMakeLists.txt
tests/complex_type/: CMakeLists.txt  complex_type.cc
tests/rendering/: CMakeLists.txt  rendering.cc
tests/serialization/: CMakeLists.txt  serialization.cc
tests/simple_type/: CMakeLists.txt  simple_type.cc
tests/traits/: CMakeLists.txt  simple_type.cc
tests/zip_handler/: CMakeLists.txt  zip_handler.cc
tmpofd/core/reflection/: reflection.h
tmpofd/core/serialization/: character_utils.h  serialization.h  xml_tools.h
tmpofd/core/struct/annotation/: annotation.h
tmpofd/core/struct/annotations/: annotations.h
tmpofd/core/struct/attachments/: attachments.h
tmpofd/core/struct/common/: complex_type.h  enum_string_type.h  simple_type.h  simple_type_fwd.h  variant_type.h
tmpofd/core/struct/custom_tags/: custom_tags.h
tmpofd/core/struct/document/: common_data.h  document.h  pages.h  permissions.h  v_preferences.h
tmpofd/core/struct/extensions/: extensions.h
tmpofd/core/struct/ofd/: doc_body.h  doc_info.h  ofd.h  version.h
tmpofd/core/struct/page/: axial_shd.h  cg_transform.h  color.h  composite.h  gouraud_shd.h  graphic_unit.h  image.h  la_gouraud_shd.h  layer.h  page.h  page_block.h  path.h  pattern.h  radial_shd.h  text.h
tmpofd/core/struct/res/: res.h
tmpofd/core/struct/signature/: signature.h
tmpofd/core/struct/signatures/: signatures.h
tmpofd/core/struct/version/: version.h
tmpofd/core/traits/: simple_type.h  std_traits.h  traits.h  type_traits.h
tmpofd/renderer/: renderer.h
tmpofd/zip_handler/: zip_handler.h
